fix Scriptinglanguage feature in Application Information ScriptEditor fixes
git-svn-id: http://svn.vdombox.ru/flextools/trunk@4768 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/controls/applicationEditor/ApplicationEditor.mxml
+++ b/IDE/v.01/vdom/controls/applicationEditor/ApplicationEditor.mxml
@@ -76,6 +76,7 @@
 	</mx:HBox>
 	
 	<mx:VBox width="100%">
+		<mx:Label text="Language"  fontWeight="bold"/>
 		<mx:RadioButtonGroup id="languageGroup"/>
 		<mx:RadioButton label="vscript" value="vscript" groupName="languageGroup" selected="true"/>
 		<mx:RadioButton label="python" value="python" groupName="languageGroup"/>
