git-svn-id: http://svn.vdombox.ru/flextools/trunk@4775 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/components/scriptEditor/CreatingNewActionWindow.mxml
+++ b/IDE/v.01/vdom/components/scriptEditor/CreatingNewActionWindow.mxml
@@ -52,10 +52,8 @@
 				regExpValidator.addEventListener( ValidationResultEvent.INVALID,
 												  validHandler );
 
-				regExpValidator.noMatchError = "PleAse Input Correct NamE";
+				regExpValidator.noMatchError = "Please Input Correct Name";
 				regExpValidator.triggerEvent = Event.CHANGE;
-
-
 			}
 
 			private function showHandler() : void
@@ -85,7 +83,6 @@
 			{
 				dispatchEvent( new CloseEvent( CloseEvent.CLOSE ) );
 			}
-
 
 			private function closeHandler( cEvent : CloseEvent ) : void
 			{
