git-svn-id: http://svn.vdombox.ru/flextools/trunk@4846 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -453,11 +453,15 @@
             			
             			ProgressManager.start(ProgressManager.DIALOG_MODE, false);
             			
-						processOpenedTpl();
+            			tpl.processOpened();						
 						
 						ProgressManager.complete();
-						
-						return;        					
+
+						if(!tpl.isEncoded)
+						{
+							processOpenedTpl();
+							return;
+						}
 					}
         			
         			SuperAlert.show("Invalid secret key.");
@@ -713,9 +717,14 @@
             		
             		tpl.name = propDlg.txtName.text;
 					tpl.description = propDlg.txtDesc.text;
-					try {
+					try 
+					{
 						tpl.picture = new File(StringUtil.trim(propDlg.picBrowse.text));
-					} catch (e:*) {}
+					} 
+					catch (e:*) 
+					{
+						trace('Wrong pic path');
+					}
 					tpl.key = StringUtil.trim(propDlg.txtKey.text);
 					
 					templateChanged();
