--- a/Help/Editor/v.01/src/AddProduct.mxml
+++ b/Help/Editor/v.01/src/AddProduct.mxml
@@ -2,7 +2,7 @@
 
 <mx:TitleWindow 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
-	layout="absolute" width="400" height="270"
+	layout="absolute" 
 	title="Add"
 	creationComplete="creationComplete()"
 	showCloseButton="true"
@@ -20,6 +20,7 @@
 	</mx:Style>
 	<mx:Script>
 		<![CDATA[
+			import mx.controls.Label;
 			import mx.collections.ArrayCollection;
 			import mx.controls.CheckBox;
 			import mx.managers.PopUpManager;
@@ -30,20 +31,45 @@
 			
 			private function creationComplete():void 
 			{
+				sqlProxy.creatDB();
+				
 				addEventListener(CloseEvent.CLOSE, closeHandler); 
 				PopUpManager.centerPopUp(this);
 				
 				addEventListener(KeyboardEvent.KEY_UP,keyboardHandler); 
 				
-				productLabel.setFocus() 	;
+				productTitle.setFocus();
+				
+				var lbError : Label = new Label();
+				lbError.text = "This Name already in Data Base";
+				lbError.setStyle("color", "#FF0000");
+				
+				errorFormItem.addChild(lbError);
 			}
+			
 			
 			private function keyboardHandler(msEvt:KeyboardEvent):void
 			{
 				if(msEvt.charCode == 27)
 				{
 					dispatchEvent(new CloseEvent(CloseEvent.CLOSE));
+				} 
+				else if (msEvt.charCode == 13) 
+				{
+					okHandler();
 				}
+				else 
+				{
+					
+//					if(state.contains(lbError))
+//						state.removeChild(lbError);
+					
+//					trace(": " + msEvt.charCode);
+//					var lb : Label = new Label();
+//						lb.text = "Wrong Data!!!";
+//					formTitle.addChild(lb);
+//					
+				} 
 			}
 			
 			private function closeHandler(cEvent:CloseEvent):void 
@@ -56,11 +82,24 @@
 				dispatchEvent(new CloseEvent(CloseEvent.CLOSE));
 			}
 			
+			private var errorFormItem : FormItem = new FormItem();
 			private function okHandler():void 
 			{
-				sqlProxy.creatDB();
-				sqlProxy.
-				dispatchEvent(new CloseEvent(CloseEvent.CLOSE));
+				if(!sqlProxy.productInDB(productName.text))
+				{
+					sqlProxy.addProduct(productName.text, '0', productTitle.text,
+						productDescription.text,  productLanguage.text );
+					dispatchEvent(new CloseEvent(CloseEvent.CLOSE));
+				} else
+				{
+					errorFormItem.label = "Error:"
+//					formHeading.addChild(errorFormItem);
+					trace("Error: Wtis name already in DateBase")
+					
+					if(!form.contains(errorFormItem))
+						form.addChild(errorFormItem);
+				}
+				
 			}
 			
 			private function editClickHandler():void
@@ -73,34 +112,33 @@
 		
 	</mx:Script>
 	<mx:HBox width="100%" height="100%">
-		<mx:VBox label="Add Product" width="100%" height="100%" paddingBottom="10" paddingLeft="10" paddingRight="10" right="0">
-			<mx:Label text="Product:"  fontSize="20"/>
-			<mx:VBox width="100%" height="100%"  >
-				
-				<mx:HBox right="0">
-					<mx:Label  x="17" y="13" text="Label:" />
-					<mx:TextInput id="productLabel" x="65" y="11" text="Label of product" width="211" />
-				</mx:HBox>
-				
-				<mx:HBox >
-					<mx:Label x="18" y="42" text="Name:"/>
-					<mx:TextInput x="65" y="40" text="Like 'VDOM_IDE'" width="211"/>
-				</mx:HBox >
-				
-				<mx:HBox >
-					<mx:Label x="18" y="42" text="Language:"/>
-					<mx:TextInput x="65" y="40" text="Like 'en_EN'" width="211"/>
-				</mx:HBox >
-				
-				<mx:Label x="10" y="74" text="Description:"/>
-				<mx:TextArea x="18" y="100" width="258" height="87"/>
-				
-			</mx:VBox>
+		<mx:VBox id="state" label="Add Product" width="100%" height="100%" paddingBottom="10" paddingLeft="10" paddingRight="10" right="0">
+			<mx:Form id="form" width="100%" height="100%">
+	            <mx:FormHeading  label="Enter values into the form."/>
+	            
+	            <mx:FormItem id="formTitle" label="Title:">
+					<mx:TextInput id="productTitle" x="65" y="11"  width="211" toolTip="Example: Vdom IDE"/>
+          		 </mx:FormItem>
+          		 
+          		 <mx:FormItem label="Name:">
+					<mx:TextInput id="productName" x="65" y="40"  width="211" toolTip="Example: Vdom_IDE"/>
+          		 </mx:FormItem>
+          		 
+          		 <mx:FormItem label="Language:">
+					<mx:TextInput id="productLanguage" x="65" y="40"  width="211" text="en_US" toolTip="Example: en_US"/>
+          		 </mx:FormItem>
+          		 
+          		 <mx:FormItem label="Description:" width="100%" height="100%">
+					<mx:TextArea  id="productDescription" x="18" y="100" width="100%" height="100%"/>
+          		 </mx:FormItem>
+          		 
+			</mx:Form>
+		
 		</mx:VBox>
 	<mx:VBox horizontalAlign="center"   backgroundColor="#373739"
 			height="100%" paddingTop="2" paddingBottom="2" paddingLeft="10" paddingRight="10" color="#FFFFFF" >
     		 
-    		  <mx:Button  label="Ok"  click="{cancelPressed()}"
+    		  <mx:Button  label="Ok"  click="{okHandler()}"
     		  	color="#FFFFFF"  width="100%"  borderColor="#999999"
 				fillColors="#333333"  textSelectedColor="#FFFFFF" cornerRadius="1" themeColor="#656565" textRollOverColor="#FFFFFF"/>
 			
