--- a/Help/Editor/v.01/src/Products.mxml
+++ b/Help/Editor/v.01/src/Products.mxml
@@ -2,7 +2,7 @@
 
 <mx:TitleWindow 
 	xmlns:mx="http://www.adobe.com/2006/mxml" 
-	layout="absolute" width="400" height="450"
+	layout="absolute" width="400"
 	title="Products"
 	creationComplete="creationComplete()"
 	showCloseButton="true"
@@ -11,7 +11,7 @@
 	visible="true" shadowDirection="right"
 	borderColor="#373739" titleStyleName="resourceBrowserTitle"
 	borderThicknessLeft="1" borderThicknessRight="1"
->
+ height="233">
 	<mx:Style>
 		.resourceBrowserTitle {
 			color:#FFFFFF;
@@ -26,11 +26,27 @@
 			import mx.managers.PopUpManager;
 			import mx.events.CloseEvent;
 			
+			private var sqlProxy:SQLProxy = new SQLProxy();
 			
 			private function creationComplete():void 
 			{
 				addEventListener(CloseEvent.CLOSE, closeHandler); 
 				PopUpManager.centerPopUp(this);
+				
+				showAllProducts();
+			}
+			
+			private function showAllProducts():void
+			{
+				listOfProducts.dataProvider =  sqlProxy.getAllProducts();
+				listOfProducts.selectedIndex = 0;
+				
+//				trace(": "+ listOfProducts.dataProvider.source.length);
+			}
+			
+			private function validateListOfProducts(evt:Event):void
+			{
+				showAllProducts();
 			}
 			
 			private function closeHandler(cEvent:CloseEvent):void 
@@ -51,23 +67,27 @@
 			private function editClickHandler():void
 			{
 				var rbWnd:EditProduct = EditProduct(PopUpManager.createPopUp(this, EditProduct, true));
+				rbWnd.addEventListener(CloseEvent.CLOSE, validateListOfProducts);
 			}
 						
 			private function addClickHandler():void
 			{
 				var rbWnd:AddProduct = AddProduct(PopUpManager.createPopUp(this, AddProduct, true));
+				rbWnd.addEventListener(CloseEvent.CLOSE, validateListOfProducts);
 			}
 			
 			private function deleteClickHandler():void
 			{
-				Alert.show("Delete this Product?", "Dalete", 3, this, alertClickHandler);
+				if( listOfProducts.selectedItem)
+					Alert.show("Delete this Product?", "Dalete", 3, this, alertClickHandler);
 			}
 			
 			private function alertClickHandler(event:CloseEvent):void
 			{
 				if (event.detail==Alert.YES)
 		        {
-//		        	saveToServer();
+		        	sqlProxy.deleteProduct(listOfProducts.selectedItem.name);
+		        	showAllProducts();
 		        }else
 		        {
 //		        	hide();
@@ -79,20 +99,21 @@
 	<mx:HBox width="100%" height="100%">
 		<mx:VBox label="Products" width="100%" height="100%" paddingBottom="10" paddingLeft="10" paddingRight="10">
 			<mx:Label text="List of Products:"  fontSize="20"/>
-			<mx:List width="100%" height="100%" dataProvider="[label:'Alabama']"/>
+			<mx:List  id="listOfProducts" width="100%" height="100%"  labelField="title"/>
 		</mx:VBox>
 	<mx:VBox horizontalAlign="center"   backgroundColor="#373739"
 			height="100%" paddingTop="2" paddingBottom="2" paddingLeft="10" paddingRight="10" color="#FFFFFF" >
-    		 
     		 <mx:Button  label="Add"  click="{addClickHandler()}"
     		  	color="#FFFFFF"  width="100%"  borderColor="#999999"
 				fillColors="#333333"  textSelectedColor="#FFFFFF" cornerRadius="1" themeColor="#656565" textRollOverColor="#FFFFFF"/>
 			
 			<mx:Button  label="Edit"  click="{editClickHandler()}"
+				enabled="{ Boolean(listOfProducts.dataProvider.source.length)}"
 				color="#FFFFFF"  width="100%" borderColor="#999999"
 				fillColors="#333333"  textSelectedColor="#FFFFFF" cornerRadius="1"  themeColor="#656565" textRollOverColor="#FFFFFF"/>
 			
-			<mx:Button  label="Delete"  click="{deleteClickHandler()}"
+			<mx:Button  label="Delete"  click="{deleteClickHandler()}" 
+				enabled="{Boolean(listOfProducts.dataProvider.source.length)}"
 				color="#FFFFFF"  width="100%" borderColor="#999999"
 				fillColors="#333333"  textSelectedColor="#FFFFFF" cornerRadius="1"  themeColor="#656565" textRollOverColor="#FFFFFF"/>
 			
