--- a/Help/Reader/v.01/src/Settings.mxml
+++ b/Help/Reader/v.01/src/Settings.mxml
@@ -36,6 +36,14 @@
 				addEventListener(CloseEvent.CLOSE, closeHandler); 
 				PopUpManager.centerPopUp(this);
 				
+				getAllProducts();
+				
+			}
+			
+			private function getAllProducts():void
+			{
+				applications.removeAllChildren();
+				
 				var result:Object = sqlProxy.getAllProducts();
 				for(var i:String in result)
 				{
@@ -45,7 +53,6 @@
 					applications.addChild(chBox);
 					checkBoxArray[result[i]["name"]] = chBox;
 				}
-				
 			}
 			
 			private function closeHandler(cEvent:CloseEvent):void 
@@ -146,16 +153,12 @@
 		
 	</mx:Script>
 	<mx:TabNavigator width="100%" height="100%">
-		<mx:VBox label="Products" width="100%" height="100%" paddingBottom="10" paddingLeft="10" paddingRight="10">
+		<mx:VBox label="Products" width="100%" height="100%" show="{getAllProducts()}" 
+				paddingBottom="10" paddingLeft="10" paddingRight="10">
 			<mx:Label text="Select Necessary Products: " width="100%" textAlign="center" fontSize="20"/>
 			<mx:VBox id="applications" paddingLeft="5"   borderStyle="solid" width="100%" height="100%" />
 		</mx:VBox>
-		<mx:VBox   label="Update" width="100%" height="100%" >
-			<mx:Label text="Udate Settings" />
-			<mx:HBox>
-				<mx:ComboBox  id="comboBox" editable="true"/>
-				<mx:Button label="Chack Update"  click="{checkApdate()}" /> 			
-			</mx:HBox>
+		<mx:VBox   label="Update" width="100%" height="100%" creationComplete="checkApdate()" >
 			<mx:Label id="statu" />
 			<mx:VBox id="newProducts" />
 			<mx:Button label="Load" click="{load()}"/>
