--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/MainScreen.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/MainScreen.mxml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox 
-	xmlns:mx="http://www.adobe.com/2006/mxml"
+	xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:components="net.vdombox.ide.view.components.*"
 	
-	height="600" width="800" backgroundAlpha="1" backgroundColor="#FFFFFF">
+	creationPolicy="all" height="600" width="800"
+	
+	backgroundAlpha="1" backgroundColor="#FFFFFF">
 	<mx:TabBar 
 		id="mainTabBar"
 		
 		width="100%"/>
+	<mx:ViewStack width="100%" height="100%" creationPolicy="all">
+		<components:ApplicationManagment/>
+		<components:ModulesManagment/>
+	</mx:ViewStack>
 </mx:VBox>
