--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/ApplicationsManagment.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/ApplicationsManagment.mxml
@@ -1,66 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:ViewStack 
+<mx:VBox 
 	xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:containers="net.vdombox.ide.view.containers.*"
-	xmlns:controls="net.vdombox.ide.view.controls.*"
-	>
-	<mx:Canvas 
-		id="initModule"
+	xmlns:controls="net.vdombox.ide.view.controls.*" xmlns:components="net.vdombox.ide.view.components.*">
+	<containers:ControlPanel 
+		height="104" verticalScrollPolicy="off" width="100%"
 		
-		height="100%" width="100%">
-		<mx:Label 
-			text="Loading..."
+		borderColor="#000000" borderStyle="solid" dropShadowEnabled="true" horizontalAlign="left"
+		horizontalGap="5" paddingBottom="7" paddingLeft="7" paddingRight="7" paddingTop="7"
+		verticalAlign="middle">
+		<controls:ActionButton 
+			label="{resourceManager.getString('Application','main_new')}" styleName="newButton"/>
+		 
+		<components:SearchPanel 
+			id="searchPanel"
 			
-			horizontalCenter="0" verticalCenter="0"/>
-	</mx:Canvas>
-	<mx:VBox 
-		id="components"
+			height="86" width="250"
+			panelName="{resourceManager.getString('Application','main_search')}"/>
+		<components:ApplicationPanel
+			id="listApplicationContainer"
+			
+			focusEnabled="false" height="86" width="280"
+			panelName="{resourceManager.getString('Application','main_applist')}"/>
+		<components:ApplicationInformation 
+			id="applicationInformation"
+			
+			height="86"
+			panelName="{resourceManager.getString('Application','main_appinfo')}"/>
+	</containers:ControlPanel>
+	<mx:ViewStack 
+		id="mainViewStack"
 		
-		height="100%" width="100%"
+		height="100%" styleName="vdomBackground" width="100%"
 		
-		verticalGap="7">
-		<containers:ControlPanel 
-			height="104" verticalScrollPolicy="off" width="100%"
-			
-			borderColor="#000000" borderStyle="solid" dropShadowEnabled="true" horizontalAlign="left"
-			horizontalGap="5" paddingBottom="7" paddingLeft="7" paddingRight="7"
-			paddingTop="7" verticalAlign="middle">
-			<controls:ActionButton 
-				label="{resourceManager.getString('Application','main_new')}" styleName="newButton" />
-			<!--<controls:searchPanel
-				 id="searchPanel"
-				 height="86" width="250"
-				 panelName="{resourceManager.getString('Application','main_search')}"/>
-				 <controls:ApplicationPanel
-				 id="listApplicationContainer"
-				 focusEnabled="false" height="86" width="280"
-				 panelName="{resourceManager.getString('Application','main_applist')}"/>
-				 <controls:ApplicationInformation
-				 id="applicationInformation"
-				 height="86"
-				 panelName="{resourceManager.getString('Application','main_appinfo')}"/>-->
-		</containers:ControlPanel>
-		<mx:ViewStack 
-			id="mainViewStack"
-			
-			height="100%" styleName="vdomBackground" width="100%"
-			
-			borderColor="#000000" borderStyle="solid" dropShadowEnabled="true">
-			<!--<main:Main
-				 id="mainCanvas"
-				 height="100%" styleName="mainCanvas" width="100%"
-				 borderStyle="none"/>
-				 <createApplication:CreateApplication
-				 id="createApplication"
-				 height="100%" width="100%"/>
-				 <applicationProperties:ApplicationProperties
-				 id="applicationProperties"
-				 height="100%" width="100%"/>
-				 <editApplication:EditApplication
-				 id="editApplication"
-				 height="100%" width="100%"/>
-				 <searchResult:SearchResult
-				 id="searchResult"
-				 height="100%" width="100%"/>-->
-		</mx:ViewStack>
-	</mx:VBox>
-</mx:ViewStack>
+		borderColor="#000000" borderStyle="solid" dropShadowEnabled="true">
+		<!--<main:Main
+			 id="mainCanvas"
+			 height="100%" styleName="mainCanvas" width="100%"
+			 borderStyle="none"/>
+			 <createApplication:CreateApplication
+			 id="createApplication"
+			 height="100%" width="100%"/>
+			 <applicationProperties:ApplicationProperties
+			 id="applicationProperties"
+			 height="100%" width="100%"/>
+			 <editApplication:EditApplication
+			 id="editApplication"
+			 height="100%" width="100%"/>
+			 <searchResult:SearchResult
+			 id="searchResult"
+			 height="100%" width="100%"/>-->
+	</mx:ViewStack>
+</mx:VBox>
