git-svn-id: http://svn.vdombox.ru/flextools/trunk@4888 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01Core/_src/theme/css/loginForm.css
+++ b/IDE/v.01Core/_src/theme/css/loginForm.css
@@ -1,6 +1,6 @@
 .loginButtonOK {
 	
-	color: #FFFFFF;
+	color: #444444;
 	
 	upSkin: Embed(source="theme.swf", symbol="LoginLeftButton");
 	overSkin: Embed(source="theme.swf", symbol="LoginLeftButton");
@@ -15,7 +15,7 @@
 
 .loginButtonQuit {
 	
-	color: #FFFFFF;
+	color: #444444;
 	
 	upSkin: Embed(source="theme.swf", symbol="LoginRightButton");
 	overSkin: Embed(source="theme.swf", symbol="LoginRightButton");
@@ -26,4 +26,14 @@
 	selectedOverSkin: Embed(source="theme.swf", symbol="LoginRightButton");
 	selectedDownSkin: Embed(source="theme.swf", symbol="LoginRightButton");
 	selectedDisabledSkin: Embed(source="theme.swf", symbol="LoginRightButton");
+}
+.loginControlBar
+{
+	paddingBottom: 0;
+	paddingLeft: 0;
+	paddingRight: 0;
+	paddingTop: 0;
+	
+	backgroundImage: Embed(source="theme.swf", symbol="LoginControlBarBackground");
+	backgroundSize: "100%";
 }
