--- a/IDE/v.01Core/src/net/vdombox/ide/view/components/MainScreen.mxml
+++ b/IDE/v.01Core/src/net/vdombox/ide/view/components/MainScreen.mxml
@@ -2,22 +2,27 @@
 <mx:Canvas 
 	xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:components="net.vdombox.ide.view.components.*"
 	
-	creationPolicy="all" height="100%" width="100%" minWidth="800" minHeight="600"
-	
-	borderColor="#000000" borderStyle="solid" backgroundAlpha="1.0" backgroundColor="#FFFFFF">
+	creationPolicy="all" height="100%" minHeight="600" minWidth="800" width="100%">
+	<components:MainTitleBar 
+		width="100%"/>
 	<mx:TabBar 
 		id="mainTabBar"
 		
-		height="30" width="100%"/>
+		height="30" width="100%"
+		
+		top="50"/>
 	<mx:ViewStack 
 		id="componentsStack"
 		
 		creationPolicy="all" height="100%" width="100%"
 		
-		top="30">
+		top="80">
 		<components:ApplicationsManagment 
 			id="applicationsManagment"/>
 		<components:ModulesManagment 
 			id="modulesManagment"/>
 	</mx:ViewStack>
+	<mx:Image 
+		height="70" source="@Embed(source='assets/login/logo.png')" width="70" x="20"
+		y="10"/>
 </mx:Canvas>
