git-svn-id: http://svn.vdombox.ru/flextools/trunk@4896 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Question.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Question.mxml
@@ -88,7 +88,7 @@
 		        dialog.strQuestion = question;
 		        dialog.strTitle = title;
 		        dialog.fCloseHandler = closeHandler;
-		        dialog.arrAnswers = answers;
+		        dialog.arrAnswers = answers?answers:[];
 		        
 		        dialog.mode = mode;
 		        dialog.strFilter = filter?StringUtil.trim(filter):null;
